8352587: C2 SuperWord: we must avoid Multiversioning for PeelMainPost loops

Reviewed-by: chagedorn, kvn